src/test/ui/issues/issue-59508.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-59508.rs:10:25
   |
LL |     pub fn do_things<T, 'a, 'b: 'a>() {
   |                     ----^^--^^----- help: reorder the parameters: `<'a, 'b: 'a, T>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: aborting due to previous error

